--- a/spring-batch-docs/src/main/asciidoc/schema-appendix.adoc
+++ b/spring-batch-docs/src/main/asciidoc/schema-appendix.adoc
@@ -319,6 +319,17 @@ belongs. There may be more than one row associated with a given execution.
 * `SHORT_CONTEXT`: A string version of the `SERIALIZED_CONTEXT`.
 * `SERIALIZED_CONTEXT`: The entire context, serialized.
 
+> If you did create database table, but can't create table follow try something like below
+----
+CREATE TABLE BATCH_JOB_EXECUTION_CONTEXT  (
+  JOB_EXECUTION_ID BIGINT PRIMARY KEY,
+  SHORT_CONTEXT VARCHAR(2500) NOT NULL,
+  SERIALIZED_CONTEXT BLOB,
+  constraint JOB_EXEC_CTX_FK foreign key (JOB_EXECUTION_ID)
+  references BATCH_JOB_EXECUTION(JOB_EXECUTION_ID)
+) ;
+----
+
 [[metaDataBatchStepExecutionContext]]
 === `BATCH_STEP_EXECUTION_CONTEXT`
 
